[Add] kata 4 done