@@ -5,7 +5,6 @@ import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /*
     Goal: use map() to project an array of videos into an array of {id, title}-pairs
@@ -19,6 +18,6 @@ public class Kata1 {
     public static List<Map<Integer, String>> execute() {
         List<Movie> movies = DataUtil.getMovies();
 
-        return movies.stream().map(ele -> Map.of(ele.getId(), ele.getTitle())).collect(Collectors.toList());
+        return movies.stream().map(ele -> Map.of(ele.getId(), ele.getTitle())).toList();
     }
 }
