@@ -4,7 +4,6 @@ import model.Movie;
 import util.DataUtil;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /*
     Goal: Chain filter() and map() to collect the ids of videos that have a rating of 5.0
@@ -20,6 +19,6 @@ public class Kata2 {
         List<Movie> movies = DataUtil.getMovies();
 
         return movies.stream().map(ele -> ele.getRating().intValue())
-                .filter(rating -> rating == 5.0).collect(Collectors.toList());
+                .filter(rating -> rating == 5.0).toList();
     }
 }
