@@ -5,7 +5,6 @@ import model.MovieList;
 import util.DataUtil;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /*
     Goal: Use map() and flatMap() to project and flatten the movieLists into an array of video ids (flatMap(c -> c.stream()))
@@ -22,6 +21,6 @@ public class Kata3 {
 
         return movieLists.stream()
                 .flatMap(movieList -> movieList.getVideos().stream().map(Movie::getId))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
